[gd_scene load_steps=4 format=2]

[ext_resource path="res://Creature/StatusDisplay/StatusDisplay.tscn" type="PackedScene" id=1]
[ext_resource path="res://Creature/Creature.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]

[node name="Creature" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="StatusDecayTimer" type="Timer" parent="."]
autostart = true

[node name="StatusDisplay" parent="." instance=ExtResource( 1 )]
radius = 16

[connection signal="timeout" from="StatusDecayTimer" to="." method="_on_StatusDecayTimer_timeout"]
